read endpoints with 404
