# index.js
@@ -2,6 +2,7 @@ const express = require("express");
 const swaggerUi = require("swagger-ui-express");
 const openapi = require("./openapi.json");
 const infoRoutes = require("./routes/infoRoutes");
+const taskRoutes = require("./routes/taskRoutes");
 
 const app = express();
 const PORT = 3000;
@@ -9,6 +10,7 @@ const PORT = 3000;
 app.use(express.json());
 app.use("/docs", swaggerUi.serve, swaggerUi.setup(openapi));
 app.use("/", infoRoutes);
+app.use("/tasks", taskRoutes);
 
 app.listen(PORT, () => {
   console.log(`Server is running on http://localhost:${PORT}`);
